error_log.txt
C:\Users\triK\Desktop\apk jeune\play-me\server.ts:6
import { initDatabase, getCachedSearch, setCachedSearch, isUsingMemoryCache } from "./server/db.ts";
                       ^
SyntaxError: The requested module './server/db.ts' does not provide an export named 'getCachedSearch'
    at #_instantiate (node:internal/modules/esm/module_job:254:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:369:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:689:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.9.0
